--- a/PinguinPower/Assembly-CSharp-vs.csproj
+++ b/PinguinPower/Assembly-CSharp-vs.csproj
@@ -168,6 +168,7 @@
      <Compile Include="Assets\Scripts\LeverCode.cs" />
      <Compile Include="Assets\Scripts\MenuManager.cs" />
      <Compile Include="Assets\Scripts\MovingObjectScript.cs" />
+     <Compile Include="Assets\Scripts\SaveCallibration.cs" />
      <Compile Include="Assets\Scripts\SaveManager.cs" />
      <Compile Include="Assets\Scripts\SceneFader.cs" />
      <Compile Include="Assets\Scripts\TeleportScript.cs" />
@@ -212,7 +213,7 @@
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="LeapCSharp.NET3.5">
- <HintPath>C:/Users/Alexander/Documents/GitHub/PinguinPower/PinguinPower/Assets/Plugins/LeapCSharp.NET3.5.dll</HintPath>
+ <HintPath>C:/Users/Alexander/Documents/GitHub/PinguinPower2/PinguinPower/PinguinPower/Assets/Plugins/LeapCSharp.NET3.5.dll</HintPath>
  </Reference>
  <Reference Include="UnityEditor.iOS.Extensions.Xcode">
  <HintPath>C:/Program Files/Unity/Editor/Data/PlaybackEngines/iossupport/UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
